infrastructure-live-1/dev/vpc/4.nat.tf
resource "aws_eip" "nat" {
  domain = "vpc"

  tags = {
    Name = "nat-gateway-eip"
  }
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id = aws_subnet.public-us-east-2a.id

  tags = {
    Name = "nat-gateway"
  }

  depends_on = [ aws_internet_gateway.igw ]
}
